Added fail condition and grace period parameters

--- a/resourceManagement/job.yaml
+++ b/resourceManagement/job.yaml
@@ -3,3 +3,5 @@ containerImage: "random-status-log:1.0"
 restartPolicy: Never
 backoffLimit: 0
 namespace: test
+failCondition: "Starting database deletion process"
+gracePeriod: 2
